--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 * {
-  /*margin: 0;*/
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+ul {
+  margin-block-start:1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
 }
 
 .profile-pic {
