--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ ul {
   padding-inline-start: 40px;
 }
 
+.section {
+  padding: 10px;
+}
+
 .profile-pic {
   width: 150px;
   height: 150px;
@@ -31,6 +35,7 @@ ul {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
+  align-items: center;
 }
 
 .contacts * {
