--- a/style.css
+++ b/style.css
@@ -43,17 +43,17 @@ ul {
 }
 
 .about {
-  background-color: blue;
+  background-color: #ffc;
 }
 
 .project {
-  background-color: green;
+  background-color: #7c7;
 }
 
 .experience {
-  background-color: yellow;
+  background-color: #ccf;
 }
 
 .footer {
-  background-color: grey;
+  background-color: #ccc;
 }
