--- a/style.css
+++ b/style.css
@@ -61,3 +61,18 @@ ul {
 .footer {
   background-color: #ccc;
 }
+
+@media only screen and (min-width 961px) {
+  .content {
+    display: flex;
+  }
+  .about {
+    flex: 1;
+  }
+  .project {
+    flex: 2;
+  }
+  .experience {
+    flex: 1;
+  }
+}
