--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ ul {
   background-color: #ccc;
 }
 
-@media only screen and (min-width 961px) {
+@media only screen and (min-width: 961px) {
   .content {
     display: flex;
   }
